Cambios en reportes

--- a/GlobalEvents/GlobalEvents/Views/Comments/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Comments/Details.cshtml
@@ -8,116 +8,118 @@
 <br />
 <br />
 
-<div class="card">
-    <div class="card-content">
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">
-                @Html.DisplayNameFor(model => model.CommentId)
-            </label>
-            <div class="col-sm-10">
-                <p class="form-control-static">
-                    @Html.DisplayFor(model => model.CommentId)
-                </p>
-            </div>
-
-            <label class="col-sm-2 col-form-label">
-                @Html.DisplayNameFor(model => model.Comentario)
-            </label>
-            <div class="col-sm-10">
-                <p class="form-control-static">
-                    @Html.DisplayFor(model => model.Comentario)
-                </p>
-            </div>
-
-            @if (Model.ComentarioPadre != null)
-            {
+@using (Html.BeginForm())
+{
+    <div class="card">
+        <div class="card-content">
+            <div class="form-group row">
                 <label class="col-sm-2 col-form-label">
-                    @Html.DisplayNameFor(model => model.ComentarioPadre)
+                    @Html.DisplayNameFor(model => model.CommentId)
                 </label>
                 <div class="col-sm-10">
                     <p class="form-control-static">
-                        @Html.DisplayFor(model => model.ComentarioPadre)
+                        @Html.DisplayFor(model => model.CommentId)
                     </p>
                 </div>
-            }
 
-            @if (Model.FechaUltimaActualizacion != null)
-            {
                 <label class="col-sm-2 col-form-label">
-                    @Html.DisplayNameFor(model => model.FechaUltimaActualizacion)
+                    @Html.DisplayNameFor(model => model.Comentario)
                 </label>
                 <div class="col-sm-10">
                     <p class="form-control-static">
-                        @Html.DisplayFor(model => model.FechaUltimaActualizacion)
+                        @Html.DisplayFor(model => model.Comentario)
                     </p>
                 </div>
-            }
 
-            <label class="col-sm-2 col-form-label">
-                @Html.DisplayNameFor(model => model.Fecha)
-            </label>
-            <div class="col-sm-10">
-                <p class="form-control-static">
-                    @Html.DisplayFor(model => model.Fecha)
-                </p>
-            </div>
+                @if (Model.ComentarioPadre != null)
+                {
+                    <label class="col-sm-2 col-form-label">
+                        @Html.DisplayNameFor(model => model.ComentarioPadre)
+                    </label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static">
+                            @Html.DisplayFor(model => model.ComentarioPadre)
+                        </p>
+                    </div>
+                }
 
-            <label class="col-sm-2 col-form-label">
-                @Html.DisplayNameFor(model => model.EventId)
-            </label>
-            <div class="col-sm-10">
-                <p class="form-control-static">
-                    @Html.DisplayFor(model => model.EventId)
-                </p>
-            </div>
+                @if (Model.FechaUltimaActualizacion != null)
+                {
+                    <label class="col-sm-2 col-form-label">
+                        @Html.DisplayNameFor(model => model.FechaUltimaActualizacion)
+                    </label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static">
+                            @Html.DisplayFor(model => model.FechaUltimaActualizacion)
+                        </p>
+                    </div>
+                }
 
-            <label class="col-sm-2 col-form-label">
-                @Html.DisplayNameFor(model => model.Fecha)
-            </label>
-            <div class="col-sm-10">
-                <p class="form-control-static">
-                    @Html.DisplayFor(model => model.Fecha)
-                </p>
-            </div>
+                <label class="col-sm-2 col-form-label">
+                    @Html.DisplayNameFor(model => model.Fecha)
+                </label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.Fecha)
+                    </p>
+                </div>
 
-            <label class="col-sm-2 col-form-label">
-                @Html.DisplayNameFor(model => model.iDUsuario)
-            </label>
-            <div class="col-sm-10">
-                <p class="form-control-static">
-                    @Html.DisplayFor(model => model.iDUsuario)
-                </p>
-            </div>
+                <label class="col-sm-2 col-form-label">
+                    @Html.DisplayNameFor(model => model.EventId)
+                </label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.EventId)
+                    </p>
+                </div>
 
-            <label class="col-sm-2 col-form-label">
-                @Html.DisplayNameFor(model => model.Like)
-            </label>
-            <div class="col-sm-10">
-                <p class="form-control-static">
-                    @Html.DisplayFor(model => model.Like)
-                </p>
-            </div>
+                <label class="col-sm-2 col-form-label">
+                    @Html.DisplayNameFor(model => model.Fecha)
+                </label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.Fecha)
+                    </p>
+                </div>
 
-            <label class="col-sm-2 col-form-label">
-                @Html.DisplayNameFor(model => model.UnLike)
-            </label>
-            <div class="col-sm-10">
-                <p class="form-control-static">
-                    @Html.DisplayFor(model => model.UnLike)
-                </p>
-            </div>
+                <label class="col-sm-2 col-form-label">
+                    @Html.DisplayNameFor(model => model.iDUsuario)
+                </label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.iDUsuario)
+                    </p>
+                </div>
 
-            @using (Html.BeginForm())
-            {
+                <label class="col-sm-2 col-form-label">
+                    @Html.DisplayNameFor(model => model.Like)
+                </label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.Like)
+                    </p>
+                </div>
+
+                <label class="col-sm-2 col-form-label">
+                    @Html.DisplayNameFor(model => model.UnLike)
+                </label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+                        @Html.DisplayFor(model => model.UnLike)
+                    </p>
+                </div>
+
+                @Html.HiddenFor(model => model.CommentId)
+
                 <label class="col-sm-2 col-form-label">
                     @Html.DisplayNameFor(model => model.Estado)
                 </label>
-                @Html.EnumDropDownListFor(model => model.Estado, null, new { @class = "form-control" })
+                @Html.EnumDropDownListFor(model => model.Estado)
 
                 <script>
-$(document).ready(function () {
+                    $(document).ready(function () {
                         $('select').material_select();
-            });</script>
+                    });</script>
 
 
                 @Html.AntiForgeryToken()
@@ -126,15 +128,14 @@ $(document).ready(function () {
                         <input type="submit" value="Guardar" class="btn btn-primary" />
                     </div>
                 </div>
-            }
+            </div>
 
         </div>
-
-        <div class="fixed-action-btn">
-            <a class="btn-floating btn-large green" href="~/Comments/Edit/@Model.CommentId">
-                <i class="large material-icons">mode_edit</i>
-            </a>
-        </div>
-
     </div>
+}
+
+<div class="fixed-action-btn">
+    <a class="btn-floating btn-large green" href="~/Comments/Edit/@Model.CommentId">
+        <i class="large material-icons">mode_edit</i>
+    </a>
 </div>
