--- a/GlobalEvents/GlobalEvents/Views/Comments/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Comments/Details.cshtml
@@ -106,6 +106,10 @@
                         @Html.DisplayFor(model => model.UnLike)
                     </p>
                 </div>
+                <br />
+                <div>
+                    @Html.ActionLink("Volver", "Listado")
+                </div>
             </div>
         </div>
     </div>
