--- a/GlobalEvents/GlobalEvents/Views/Events/Delete.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Delete.cshtml
@@ -84,7 +84,9 @@
             @Html.AntiForgeryToken()
 
             <div class="form-actions no-color">
-                <input type="submit" value="Eliminar" class="btn btn-default" /> |
+                <input type="submit" value="Eliminar" class="btn btn-default" />
+                <br />
+                <br />
                 @Html.ActionLink("Volver", "Index")
             </div>
         }
