--- a/GlobalEvents/GlobalEvents/Views/Manage/CommentReported.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Manage/CommentReported.cshtml
@@ -142,6 +142,9 @@
                     </div>
             }
             </div>
+        <div>
+            @Html.ActionLink("Volver", "Reportes")
+        </div>
     </div>
 </div>
 
