--- a/GlobalEvents/GlobalEvents/Views/Manage/EventReported.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Manage/EventReported.cshtml
@@ -103,6 +103,9 @@
                     </div>
             }
         </div>
+        <div>
+            @Html.ActionLink("Volver", "Reportes")
+        </div>
     </div>
 </div>
 
