--- a/GlobalEvents/GlobalEvents/Views/Shared/Error.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/Error.cshtml
@@ -7,8 +7,8 @@
 <br />
 
 <div class="card">
-    <div class="card-title">Error</div>
-    <div class="card-content">
+    <div class="card-title center-align">Error</div>
+    <div class="card-content center-align">
         Ocurrió un error, si considera que es incorrecto, contáctese con el Administrador del Sistema.
     </div>
 </div>
