--- a/GlobalEvents/GlobalEvents/Views/Users/ChangePassword.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/ChangePassword.cshtml
@@ -48,5 +48,5 @@
     </div>
 }
 <div>
-    @Html.ActionLink("Volver a usuarios", "Index")
+    @Html.ActionLink("Volver a usuarios", "Listado")
 </div>
