--- a/GlobalEvents/GlobalEvents/Views/Users/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Create.cshtml
@@ -85,6 +85,6 @@
 @if (WebSecurity.IsAuthenticated)
 {
     <div>
-        @Html.ActionLink("Volver al listado", "Index")
+        @Html.ActionLink("Volver al listado", "Listado")
     </div>
 }
