--- a/GlobalEvents/GlobalEvents/Views/Users/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Details.cshtml
@@ -65,7 +65,7 @@
             <br />
             <div>
                 
-                @Html.ActionLink("Volver a usuarios", "Index")
+                @Html.ActionLink("Volver a usuarios", "Listado")
             </div>
         </div>
         <div class="fixed-action-btn">
