--- a/GlobalEvents/GlobalEvents/Views/Users/Edit.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Edit.cshtml
@@ -59,7 +59,7 @@
         }
         <div>
             @Html.ActionLink("Cambiar contraseña", "ChangePassword", "Users", new { id = Model.Id }, null) |
-            @Html.ActionLink("Volver a usuarios", "Index")
+            @Html.ActionLink("Volver a usuarios", "Listado")
         </div>
         </div>
 </div>
