--- a/GlobalEvents/GlobalEvents/Views/Users/Listado.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Listado.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ViewModels.ListUserViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Listado";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
