--- a/GlobalEvents/GlobalEvents/Views/Users/Delete.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Users/Delete.cshtml
@@ -68,7 +68,7 @@
                     <input type="submit" value="Eliminar" class="btn btn-primary" />
                 </div>
                 <br />
-                <div class="col-s6">@Html.ActionLink("Volver a usuarios", "Index")</div>
+                <div class="col-s6">@Html.ActionLink("Volver a usuarios", "Listado")</div>
             }
         </div>        
         </div>
